<resources>
    <string name="app_name">LoversMessage</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lovers_message">Lovers message</string>
    <string name="home_screen">Home Screen</string>
    <string name="message_screen">Message Screen</string>
    <string name="audio_screen">Audio Screen</string>
    <string name="photo_screen">Photo Screen</string>
    <string name="video_screen">Video Screen</string>
    <string name="new_message_header">Create a message for your lover</string>
    <string name="choose_a_card">Choose a card</string>
    <string name="write_a_message">Write a message</string>
    <string name="btn_new_msg_next">Next page</string>
    <string name="msg_hint">Type your message here</string>
    <string name="message_send_time_header">Set time to send the card to receiver</string>
    <string name="set_date_btn">Set date</string>
    <string name="field_date_text">Send time is not set yet</string>
    <string name="new_msg_date_time_header">Date and Time</string>
    <string name="new_msg_pick_date_header">Select date to send the message</string>
    <string name="btn_pick_date">Set Date</string>
    <string name="field_select_date">Select the date</string>
    <string name="new_msg_pick_time_header">Select time to send the message</string>
    <string name="btn_pick_time">Set time</string>
    <string name="field_select_time">Select the time</string>
    <string name="btn_send_msg">Send message</string>
    <string name="register_header_text">Create new account</string>
    <string name="register_email_hint">Email</string>
    <string name="register_pass_hint">Password</string>
    <string name="register_name_hint">Name</string>
    <string name="btn_user_register">Register</string>
    <string name="register_account_hint">Already have an account?</string>
    <string name="register_screen">Register Screen</string>
    <string name="add_to_loverslist">Add Lover</string>
    <string name="user_not_found_in_db_error">User with such name doesn\'t exist</string>
</resources>