<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/homeScreen">

    <fragment
        android:id="@+id/homeScreen"
        android:name="com.mycodeflow.loversmessage.presentation.ui.HomeScreen"
        android:label="@string/home_screen"
        tools:layout="@layout/fragment_home_screen" >
        <action
            android:id="@+id/actionHomeToMessage"
            app:destination="@id/messageScreen" />
        <action
            android:id="@+id/actionHomeToAudio"
            app:destination="@id/audioScreen" />
        <action
            android:id="@+id/actionHomeToPhoto"
            app:destination="@id/photoScreen" />
        <action
            android:id="@+id/actionHomeToVideo"
            app:destination="@id/videoScreen" />
        <action
            android:id="@+id/actionToRegister"
            app:destination="@id/registerScreen" />
    </fragment>

    <fragment
        android:id="@+id/messageScreen"
        android:name="com.mycodeflow.loversmessage.presentation.ui.MessageScreen"
        android:label="@string/message_screen"
        tools:layout="@layout/fragment_message_screen" >
        <action
            android:id="@+id/actionMessageToHome"
            app:destination="@id/homeScreen" />
        <action
            android:id="@+id/actionToNewMessage"
            app:destination="@id/newMessageScreen" />
    </fragment>

    <fragment
        android:id="@+id/audioScreen"
        android:name="com.mycodeflow.loversmessage.presentation.ui.AudioScreen"
        android:label="@string/audio_screen"
        tools:layout="@layout/fragment_audio_screen" >
        <action
            android:id="@+id/actionAudioToHome"
            app:destination="@id/homeScreen" />
    </fragment>

    <fragment
        android:id="@+id/photoScreen"
        android:name="com.mycodeflow.loversmessage.presentation.ui.PhotoScreen"
        android:label="@string/photo_screen"
        tools:layout="@layout/fragment_photo_screen" >
        <action
            android:id="@+id/actionPhotoToHome"
            app:destination="@id/homeScreen" />
    </fragment>

    <fragment
        android:id="@+id/videoScreen"
        android:name="com.mycodeflow.loversmessage.presentation.ui.VideoScreen"
        android:label="@string/video_screen"
        tools:layout="@layout/fragment_video_screen" >
        <action
            android:id="@+id/actionVideoToHome"
            app:destination="@id/homeScreen" />
    </fragment>
    <fragment
        android:id="@+id/newMessageScreen"
        android:name="com.mycodeflow.loversmessage.presentation.ui.NewMessageFirstPage"
        android:label="fragment_new_message_screen"
        tools:layout="@layout/fragment_new_message_first_page" >
        <action
            android:id="@+id/actionNewMessageSecondScreen"
            app:destination="@id/newMessageSecondPage" />
    </fragment>
    <fragment
        android:id="@+id/newMessageSecondPage"
        android:name="com.mycodeflow.loversmessage.presentation.ui.NewMessageSecondPage"
        android:label="fragment_new_message_second_page"
        tools:layout="@layout/fragment_new_message_second_page" >
        <action
            android:id="@+id/actionSendMessageToHomeScreen"
            app:destination="@id/homeScreen" />
    </fragment>
    <fragment
        android:id="@+id/registerScreen"
        android:name="com.mycodeflow.loversmessage.presentation.ui.authorization.RegisterScreen"
        android:label="@string/register_screen"
        tools:layout="@layout/fragment_register_screen" />
</navigation>